# mumuse

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: arpeggiator.rs  chord.rs  circle_of_fifths.rs  modes.rs  modulation.rs  note.rs  scale.rs  secondary_dominant.rs  stream.rs  two_five_one.rs  whole_tone.rs
src/: conversions.rs  lib.rs  main.rs  messages.rs  midi.rs  music.rs  tests.rs
src/music/: chord.rs  common.rs  duration.rs  mod.rs  note.rs  scale.rs  stream.rs  time.rs
