[package]
name = "mumuse"
version = "0.1.0"
edition = "2021"
description = "Small midi parser and music theory library written in Rust"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
colored = "2"
itertools = "0.10.3"