[package]
name = "mumuse"
version = "0.3.0"
edition = "2021"
description = "Small music theory library written in Rust with MIDI capabilities."
license = "GPL-3.0-only"
documentation = "https://docs.rs/mumuse/latest/mumuse/"
repository = "https://github.com/alelouis/mumuse/"
keywords = ["music", "midi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
colored = "2"
itertools = "0.10.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"